                                        Removed excess code execution that performed no function. In some cases by
                                          commenting out the code, in others by removing it.
                                        Modifying some functions to in some cases incorporate ZC code improvments
                                          such as using zen_db_input instead of just addslashes as the ZC version
                                          of the data cleansing is improved with later versions of ZC to use 
                                          functions other than just the basic addslashes PHP code.
                                        Furthered addressing PHP 7.X related warnings by further pre-defining variables
                                          before their first use.
                                        In some cases reduced the run time of some code by accessing PHP functions
                                          to capture the expected/necessary data rather than unnecessary loops.
                                        Improved error reporting screen now that the primary key can be changed.
                                        Forced unsetting of variables in functions that generated "one-time use" 
                                          variables.
                                        Modified the install code to improve the process for future upgrades.
                                        Updated one of the dropdowns to reflect the datatype included with that option.
                                        Added German installation instructions.
4.0.36.ZC                       Updated the curver to reflect the latest version that might be identified by other
                                        users that perhaps previously downloaded 4.0.36.a from github.
                                        